--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tinder for Developer",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon ./src/app.js",
-    "start":"node ./src/app.js"
+    "dev": "nodemon ./src/app.js",
+    "start": "node ./src/app.js"
   },
   "keywords": [
     "node",
@@ -17,6 +17,7 @@
   "author": "Shahnas P",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   }
 }
